fase3/expresiones.output
Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 programa: zona1 $@1 SEPARADOR $@2 zona2

    4 zona1: zona1 definicion
    5      | definicion

    6 definicion: variables
    7           | asignaciones
    8           | sensores
    9           | actuadores
   10           | error

   11 variables: INT ListaVariables
   12          | FLOAT ListaVariables
   13          | POSITION ListaVariables
   14          | STRING ListaVariables

   15 ListaVariables: ID ';'
   16               | ID ',' ListaVariables

   17 asignaciones: ID '=' expr ';'
   18             | ID '=' '<' expr ',' expr '>' ';'
   19             | ID '=' CADENA ';'

   20 sensores: SMOKE ID '<' expr ',' expr '>' CADENA ';'
   21         | LIGHT ID '<' expr ',' expr '>' CADENA ';'
   22         | TEMPERATURE ID ID CADENA ';'

   23 actuadores: ALARM ID '<' expr ',' expr '>' CADENA ';'
   24           | ALARM ID ';'
   25           | SWITCH ID '<' expr ',' expr '>' CADENA ';'
   26           | SWITCH ID ';'
   27           | MESSAGE ID '<' expr ',' expr '>' CADENA ';'
   28           | MESSAGE ID ';'

   29 zona2: escenarios
   30      | zona2 escenarios
   31      | error

   32 $@3: %empty

   33 escenarios: SCENE ID $@3 '[' bloqueInstrucciones ']' ';'

   34 bloqueInstrucciones: bloqueInstrucciones listaEscenarios
   35                    | listaEscenarios

   36 listaEscenarios: ID expr ';'
   37                | START ';'
   38                | PAUSE ';'
   39                | START expr ';'
   40                | PAUSE expr ';'

   41 $@4: %empty

   42 listaEscenarios: IF exprl THEN $@4 '[' bloqueInstrucciones ']' ';'

   43 $@5: %empty

   44 listaEscenarios: ELSE $@5 '[' bloqueInstrucciones ']' ';'
   45                | ID OFF ';'
   46                | ID ON ';'
   47                | ID ON CADENA ';'
   48                | ID OFF CADENA ';'
   49                | ID ON ID ';'
   50                | ID OFF ID ';'

   51 $@6: %empty

   52 listaEscenarios: REPEAT expr $@6 '[' bloqueInstrucciones ']' ';'

   53 expr: ENTERO
   54     | REAL
   55     | ID
   56     | expr '*' expr
   57     | expr '-' expr
   58     | expr '+' expr
   59     | expr '/' expr
   60     | expr '%' expr
   61     | '-' expr
   62     | expr '^' expr

   63 exprl: cmp
   64      | '(' exprl ')'
   65      | '!' exprl
   66      | exprl '&' '&' exprl
   67      | exprl '|' '|' exprl
   68      | VERDAD
   69      | FALSO

   70 cmp: expr '=' '=' expr
   71    | expr '!' '=' expr
   72    | expr '>' expr
   73    | expr '<' expr
   74    | expr '<' '=' expr
   75    | expr '>' '=' expr


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 65 71
'%' (37) 60
'&' (38) 66
'(' (40) 64
')' (41) 64
'*' (42) 56
'+' (43) 58
',' (44) 16 18 20 21 23 25 27
'-' (45) 57 61
'/' (47) 59
';' (59) 15 17 18 19 20 21 22 23 24 25 26 27 28 33 36 37 38 39 40 42
    44 45 46 47 48 49 50 52
'<' (60) 18 20 21 23 25 27 73 74
'=' (61) 17 18 19 70 71 74 75
'>' (62) 18 20 21 23 25 27 72 75
'[' (91) 33 42 44 52
']' (93) 33 42 44 52
'^' (94) 62
'|' (124) 67
error (256) 10 31
ENTERO (258) 53
VERDAD (259) 68
FALSO (260) 69
ID (261) 15 16 17 18 19 20 21 22 23 24 25 26 27 28 33 36 45 46 47 48
    49 50 55
INT (262) 11
FLOAT (263) 12
POSITION (264) 13
STRING (265) 14
TEMPERATURE (266) 22
SMOKE (267) 20
LIGHT (268) 21
ALARM (269) 23 24
SWITCH (270) 25 26
MESSAGE (271) 27 28
ON (272) 46 47 49
OFF (273) 45 48 50
PAUSE (274) 38 40
START (275) 37 39
SCENE (276) 33
IF (277) 42
THEN (278) 42
ELSE (279) 44
REPEAT (280) 52
CADENA (281) 19 20 21 22 23 25 27 47 48
REAL (282) 54
SEPARADOR (283) 3
menos (284)


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
programa (49)
    en la izquierda: 3, en la derecha: 0
$@1 (50)
    en la izquierda: 1, en la derecha: 3
$@2 (51)
    en la izquierda: 2, en la derecha: 3
zona1 (52)
    en la izquierda: 4 5, en la derecha: 3 4
definicion (53)
    en la izquierda: 6 7 8 9 10, en la derecha: 4 5
variables (54)
    en la izquierda: 11 12 13 14, en la derecha: 6
ListaVariables (55)
    en la izquierda: 15 16, en la derecha: 11 12 13 14 16
asignaciones (56)
    en la izquierda: 17 18 19, en la derecha: 7
sensores (57)
    en la izquierda: 20 21 22, en la derecha: 8
actuadores (58)
    en la izquierda: 23 24 25 26 27 28, en la derecha: 9
zona2 (59)
    en la izquierda: 29 30 31, en la derecha: 3 30
escenarios (60)
    en la izquierda: 33, en la derecha: 29 30
$@3 (61)
    en la izquierda: 32, en la derecha: 33
bloqueInstrucciones (62)
    en la izquierda: 34 35, en la derecha: 33 34 42 44 52
listaEscenarios (63)
    en la izquierda: 36 37 38 39 40 42 44 45 46 47 48 49 50 52, en la derecha:
    34 35
$@4 (64)
    en la izquierda: 41, en la derecha: 42
$@5 (65)
    en la izquierda: 43, en la derecha: 44
$@6 (66)
    en la izquierda: 51, en la derecha: 52
expr (67)
    en la izquierda: 53 54 55 56 57 58 59 60 61 62, en la derecha:
    17 18 20 21 23 25 27 36 39 40 52 56 57 58 59 60 61 62 70 71 72
    73 74 75
exprl (68)
    en la izquierda: 63 64 65 66 67 68 69, en la derecha: 42 64 65
    66 67
cmp (69)
    en la izquierda: 70 71 72 73 74 75, en la derecha: 63


Estado 0

    0 $accept: . programa $end

    error        desplazar e ir al estado 1
    ID           desplazar e ir al estado 2
    INT          desplazar e ir al estado 3
    FLOAT        desplazar e ir al estado 4
    POSITION     desplazar e ir al estado 5
    STRING       desplazar e ir al estado 6
    TEMPERATURE  desplazar e ir al estado 7
    SMOKE        desplazar e ir al estado 8
    LIGHT        desplazar e ir al estado 9
    ALARM        desplazar e ir al estado 10
    SWITCH       desplazar e ir al estado 11
    MESSAGE      desplazar e ir al estado 12

    programa      ir al estado 13
    zona1         ir al estado 14
    definicion    ir al estado 15
    variables     ir al estado 16
    asignaciones  ir al estado 17
    sensores      ir al estado 18
    actuadores    ir al estado 19


Estado 1

   10 definicion: error .

    $default  reduce usando la regla 10 (definicion)


Estado 2

   17 asignaciones: ID . '=' expr ';'
   18             | ID . '=' '<' expr ',' expr '>' ';'
   19             | ID . '=' CADENA ';'

    '='  desplazar e ir al estado 20


Estado 3

   11 variables: INT . ListaVariables

    ID  desplazar e ir al estado 21

    ListaVariables  ir al estado 22


Estado 4

   12 variables: FLOAT . ListaVariables

    ID  desplazar e ir al estado 21

    ListaVariables  ir al estado 23


Estado 5

   13 variables: POSITION . ListaVariables

    ID  desplazar e ir al estado 21

    ListaVariables  ir al estado 24


Estado 6

   14 variables: STRING . ListaVariables

    ID  desplazar e ir al estado 21

    ListaVariables  ir al estado 25


Estado 7

   22 sensores: TEMPERATURE . ID ID CADENA ';'

    ID  desplazar e ir al estado 26


Estado 8

   20 sensores: SMOKE . ID '<' expr ',' expr '>' CADENA ';'

    ID  desplazar e ir al estado 27


Estado 9

   21 sensores: LIGHT . ID '<' expr ',' expr '>' CADENA ';'

    ID  desplazar e ir al estado 28


Estado 10

   23 actuadores: ALARM . ID '<' expr ',' expr '>' CADENA ';'
   24           | ALARM . ID ';'

    ID  desplazar e ir al estado 29


Estado 11

   25 actuadores: SWITCH . ID '<' expr ',' expr '>' CADENA ';'
   26           | SWITCH . ID ';'

    ID  desplazar e ir al estado 30


Estado 12

   27 actuadores: MESSAGE . ID '<' expr ',' expr '>' CADENA ';'
   28           | MESSAGE . ID ';'

    ID  desplazar e ir al estado 31


Estado 13

    0 $accept: programa . $end

    $end  desplazar e ir al estado 32


Estado 14

    3 programa: zona1 . $@1 SEPARADOR $@2 zona2
    4 zona1: zona1 . definicion

    error        desplazar e ir al estado 1
    ID           desplazar e ir al estado 2
    INT          desplazar e ir al estado 3
    FLOAT        desplazar e ir al estado 4
    POSITION     desplazar e ir al estado 5
    STRING       desplazar e ir al estado 6
    TEMPERATURE  desplazar e ir al estado 7
    SMOKE        desplazar e ir al estado 8
    LIGHT        desplazar e ir al estado 9
    ALARM        desplazar e ir al estado 10
    SWITCH       desplazar e ir al estado 11
    MESSAGE      desplazar e ir al estado 12

    SEPARADOR  reduce usando la regla 1 ($@1)

    $@1           ir al estado 33
    definicion    ir al estado 34
    variables     ir al estado 16
    asignaciones  ir al estado 17
    sensores      ir al estado 18
    actuadores    ir al estado 19


Estado 15

    5 zona1: definicion .

    $default  reduce usando la regla 5 (zona1)


Estado 16

    6 definicion: variables .

    $default  reduce usando la regla 6 (definicion)


Estado 17

    7 definicion: asignaciones .

    $default  reduce usando la regla 7 (definicion)


Estado 18

    8 definicion: sensores .

    $default  reduce usando la regla 8 (definicion)


Estado 19

    9 definicion: actuadores .

    $default  reduce usando la regla 9 (definicion)


Estado 20

   17 asignaciones: ID '=' . expr ';'
   18             | ID '=' . '<' expr ',' expr '>' ';'
   19             | ID '=' . CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    CADENA  desplazar e ir al estado 37
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39
    '<'     desplazar e ir al estado 40

    expr  ir al estado 41


Estado 21

   15 ListaVariables: ID . ';'
   16               | ID . ',' ListaVariables

    ';'  desplazar e ir al estado 42
    ','  desplazar e ir al estado 43


Estado 22

   11 variables: INT ListaVariables .

    $default  reduce usando la regla 11 (variables)


Estado 23

   12 variables: FLOAT ListaVariables .

    $default  reduce usando la regla 12 (variables)


Estado 24

   13 variables: POSITION ListaVariables .

    $default  reduce usando la regla 13 (variables)


Estado 25

   14 variables: STRING ListaVariables .

    $default  reduce usando la regla 14 (variables)


Estado 26

   22 sensores: TEMPERATURE ID . ID CADENA ';'

    ID  desplazar e ir al estado 44


Estado 27

   20 sensores: SMOKE ID . '<' expr ',' expr '>' CADENA ';'

    '<'  desplazar e ir al estado 45


Estado 28

   21 sensores: LIGHT ID . '<' expr ',' expr '>' CADENA ';'

    '<'  desplazar e ir al estado 46


Estado 29

   23 actuadores: ALARM ID . '<' expr ',' expr '>' CADENA ';'
   24           | ALARM ID . ';'

    ';'  desplazar e ir al estado 47
    '<'  desplazar e ir al estado 48


Estado 30

   25 actuadores: SWITCH ID . '<' expr ',' expr '>' CADENA ';'
   26           | SWITCH ID . ';'

    ';'  desplazar e ir al estado 49
    '<'  desplazar e ir al estado 50


Estado 31

   27 actuadores: MESSAGE ID . '<' expr ',' expr '>' CADENA ';'
   28           | MESSAGE ID . ';'

    ';'  desplazar e ir al estado 51
    '<'  desplazar e ir al estado 52


Estado 32

    0 $accept: programa $end .

    $default  aceptar


Estado 33

    3 programa: zona1 $@1 . SEPARADOR $@2 zona2

    SEPARADOR  desplazar e ir al estado 53


Estado 34

    4 zona1: zona1 definicion .

    $default  reduce usando la regla 4 (zona1)


Estado 35

   53 expr: ENTERO .

    $default  reduce usando la regla 53 (expr)


Estado 36

   55 expr: ID .

    $default  reduce usando la regla 55 (expr)


Estado 37

   19 asignaciones: ID '=' CADENA . ';'

    ';'  desplazar e ir al estado 54


Estado 38

   54 expr: REAL .

    $default  reduce usando la regla 54 (expr)


Estado 39

   61 expr: '-' . expr

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 55


Estado 40

   18 asignaciones: ID '=' '<' . expr ',' expr '>' ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 56


Estado 41

   17 asignaciones: ID '=' expr . ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    ';'  desplazar e ir al estado 63


Estado 42

   15 ListaVariables: ID ';' .

    $default  reduce usando la regla 15 (ListaVariables)


Estado 43

   16 ListaVariables: ID ',' . ListaVariables

    ID  desplazar e ir al estado 21

    ListaVariables  ir al estado 64


Estado 44

   22 sensores: TEMPERATURE ID ID . CADENA ';'

    CADENA  desplazar e ir al estado 65


Estado 45

   20 sensores: SMOKE ID '<' . expr ',' expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 66


Estado 46

   21 sensores: LIGHT ID '<' . expr ',' expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 67


Estado 47

   24 actuadores: ALARM ID ';' .

    $default  reduce usando la regla 24 (actuadores)


Estado 48

   23 actuadores: ALARM ID '<' . expr ',' expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 68


Estado 49

   26 actuadores: SWITCH ID ';' .

    $default  reduce usando la regla 26 (actuadores)


Estado 50

   25 actuadores: SWITCH ID '<' . expr ',' expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 69


Estado 51

   28 actuadores: MESSAGE ID ';' .

    $default  reduce usando la regla 28 (actuadores)


Estado 52

   27 actuadores: MESSAGE ID '<' . expr ',' expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 70


Estado 53

    3 programa: zona1 $@1 SEPARADOR . $@2 zona2

    $default  reduce usando la regla 2 ($@2)

    $@2  ir al estado 71


Estado 54

   19 asignaciones: ID '=' CADENA ';' .

    $default  reduce usando la regla 19 (asignaciones)


Estado 55

   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   61     | '-' expr .
   62     | expr . '^' expr

    '^'  desplazar e ir al estado 62

    $default  reduce usando la regla 61 (expr)


Estado 56

   18 asignaciones: ID '=' '<' expr . ',' expr '>' ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    ','  desplazar e ir al estado 72


Estado 57

   58 expr: expr '+' . expr

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 73


Estado 58

   57 expr: expr '-' . expr

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 74


Estado 59

   56 expr: expr '*' . expr

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 75


Estado 60

   59 expr: expr '/' . expr

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 76


Estado 61

   60 expr: expr '%' . expr

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 77


Estado 62

   62 expr: expr '^' . expr

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 78


Estado 63

   17 asignaciones: ID '=' expr ';' .

    $default  reduce usando la regla 17 (asignaciones)


Estado 64

   16 ListaVariables: ID ',' ListaVariables .

    $default  reduce usando la regla 16 (ListaVariables)


Estado 65

   22 sensores: TEMPERATURE ID ID CADENA . ';'

    ';'  desplazar e ir al estado 79


Estado 66

   20 sensores: SMOKE ID '<' expr . ',' expr '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    ','  desplazar e ir al estado 80


Estado 67

   21 sensores: LIGHT ID '<' expr . ',' expr '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    ','  desplazar e ir al estado 81


Estado 68

   23 actuadores: ALARM ID '<' expr . ',' expr '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    ','  desplazar e ir al estado 82


Estado 69

   25 actuadores: SWITCH ID '<' expr . ',' expr '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    ','  desplazar e ir al estado 83


Estado 70

   27 actuadores: MESSAGE ID '<' expr . ',' expr '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    ','  desplazar e ir al estado 84


Estado 71

    3 programa: zona1 $@1 SEPARADOR $@2 . zona2

    error  desplazar e ir al estado 85
    SCENE  desplazar e ir al estado 86

    zona2       ir al estado 87
    escenarios  ir al estado 88


Estado 72

   18 asignaciones: ID '=' '<' expr ',' . expr '>' ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 89


Estado 73

   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   58     | expr '+' expr .
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62

    $default  reduce usando la regla 58 (expr)


Estado 74

   56 expr: expr . '*' expr
   57     | expr . '-' expr
   57     | expr '-' expr .
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62

    $default  reduce usando la regla 57 (expr)


Estado 75

   56 expr: expr . '*' expr
   56     | expr '*' expr .
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '^'  desplazar e ir al estado 62

    $default  reduce usando la regla 56 (expr)


Estado 76

   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   59     | expr '/' expr .
   60     | expr . '%' expr
   62     | expr . '^' expr

    '^'  desplazar e ir al estado 62

    $default  reduce usando la regla 59 (expr)


Estado 77

   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   60     | expr '%' expr .
   62     | expr . '^' expr

    '^'  desplazar e ir al estado 62

    $default  reduce usando la regla 60 (expr)


Estado 78

   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr
   62     | expr '^' expr .

    '^'  desplazar e ir al estado 62

    $default  reduce usando la regla 62 (expr)


Estado 79

   22 sensores: TEMPERATURE ID ID CADENA ';' .

    $default  reduce usando la regla 22 (sensores)


Estado 80

   20 sensores: SMOKE ID '<' expr ',' . expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 90


Estado 81

   21 sensores: LIGHT ID '<' expr ',' . expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 91


Estado 82

   23 actuadores: ALARM ID '<' expr ',' . expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 92


Estado 83

   25 actuadores: SWITCH ID '<' expr ',' . expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 93


Estado 84

   27 actuadores: MESSAGE ID '<' expr ',' . expr '>' CADENA ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39

    expr  ir al estado 94


Estado 85

   31 zona2: error .

    $default  reduce usando la regla 31 (zona2)


Estado 86

   33 escenarios: SCENE . ID $@3 '[' bloqueInstrucciones ']' ';'

    ID  desplazar e ir al estado 95


Estado 87

    3 programa: zona1 $@1 SEPARADOR $@2 zona2 .
   30 zona2: zona2 . escenarios

    SCENE  desplazar e ir al estado 86

    $default  reduce usando la regla 3 (programa)

    escenarios  ir al estado 96


Estado 88

   29 zona2: escenarios .

    $default  reduce usando la regla 29 (zona2)


Estado 89

   18 asignaciones: ID '=' '<' expr ',' expr . '>' ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 97


Estado 90

   20 sensores: SMOKE ID '<' expr ',' expr . '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 98


Estado 91

   21 sensores: LIGHT ID '<' expr ',' expr . '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 99


Estado 92

   23 actuadores: ALARM ID '<' expr ',' expr . '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 100


Estado 93

   25 actuadores: SWITCH ID '<' expr ',' expr . '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 101


Estado 94

   27 actuadores: MESSAGE ID '<' expr ',' expr . '>' CADENA ';'
   56 expr: expr . '*' expr
   57     | expr . '-' expr
   58     | expr . '+' expr
   59     | expr . '/' expr
   60     | expr . '%' expr
   62     | expr . '^' expr

    '+'  desplazar e ir al estado 57
    '-'  desplazar e ir al estado 58
    '*'  desplazar e ir al estado 59
    '/'  desplazar e ir al estado 60
    '%'  desplazar e ir al estado 61
    '^'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 102


Estado 95

   33 escenarios: SCENE ID . $@3 '[' bloqueInstrucciones ']' ';'

    $default  reduce usando la regla 32 ($@3)

    $@3  ir al estado 103


Estado 96

   30 zona2: zona2 escenarios .

    $default  reduce usando la regla 30 (zona2)


Estado 97

   18 asignaciones: ID '=' '<' expr ',' expr '>' . ';'

    ';'  desplazar e ir al estado 104


Estado 98

   20 sensores: SMOKE ID '<' expr ',' expr '>' . CADENA ';'

    CADENA  desplazar e ir al estado 105


Estado 99

   21 sensores: LIGHT ID '<' expr ',' expr '>' . CADENA ';'

    CADENA  desplazar e ir al estado 106


Estado 100

   23 actuadores: ALARM ID '<' expr ',' expr '>' . CADENA ';'

    CADENA  desplazar e ir al estado 107


Estado 101

   25 actuadores: SWITCH ID '<' expr ',' expr '>' . CADENA ';'

    CADENA  desplazar e ir al estado 108


Estado 102

   27 actuadores: MESSAGE ID '<' expr ',' expr '>' . CADENA ';'

    CADENA  desplazar e ir al estado 109


Estado 103

   33 escenarios: SCENE ID $@3 . '[' bloqueInstrucciones ']' ';'

    '['  desplazar e ir al estado 110


Estado 104

   18 asignaciones: ID '=' '<' expr ',' expr '>' ';' .

    $default  reduce usando la regla 18 (asignaciones)


Estado 105

   20 sensores: SMOKE ID '<' expr ',' expr '>' CADENA . ';'

    ';'  desplazar e ir al estado 111


Estado 106

   21 sensores: LIGHT ID '<' expr ',' expr '>' CADENA . ';'

    ';'  desplazar e ir al estado 112


Estado 107

   23 actuadores: ALARM ID '<' expr ',' expr '>' CADENA . ';'

    ';'  desplazar e ir al estado 113


Estado 108

   25 actuadores: SWITCH ID '<' expr ',' expr '>' CADENA . ';'

    ';'  desplazar e ir al estado 114


Estado 109

   27 actuadores: MESSAGE ID '<' expr ',' expr '>' CADENA . ';'

    ';'  desplazar e ir al estado 115


Estado 110

   33 escenarios: SCENE ID $@3 '[' . bloqueInstrucciones ']' ';'

    ID      desplazar e ir al estado 116
    PAUSE   desplazar e ir al estado 117
    START   desplazar e ir al estado 118
    IF      desplazar e ir al estado 119
    ELSE    desplazar e ir al estado 120
    REPEAT  desplazar e ir al estado 121

    bloqueInstrucciones  ir al estado 122
    listaEscenarios      ir al estado 123


Estado 111

   20 sensores: SMOKE ID '<' expr ',' expr '>' CADENA ';' .

    $default  reduce usando la regla 20 (sensores)


Estado 112

   21 sensores: LIGHT ID '<' expr ',' expr '>' CADENA ';' .

    $default  reduce usando la regla 21 (sensores)


Estado 113

   23 actuadores: ALARM ID '<' expr ',' expr '>' CADENA ';' .

    $default  reduce usando la regla 23 (actuadores)


Estado 114

   25 actuadores: SWITCH ID '<' expr ',' expr '>' CADENA ';' .

    $default  reduce usando la regla 25 (actuadores)


Estado 115

   27 actuadores: MESSAGE ID '<' expr ',' expr '>' CADENA ';' .

    $default  reduce usando la regla 27 (actuadores)


Estado 116

   36 listaEscenarios: ID . expr ';'
   45                | ID . OFF ';'
   46                | ID . ON ';'
   47                | ID . ON CADENA ';'
   48                | ID . OFF CADENA ';'
   49                | ID . ON ID ';'
   50                | ID . OFF ID ';'

    ENTERO  desplazar e ir al estado 35
    ID      desplazar e ir al estado 36
    ON      desplazar e ir al estado 124
    OFF     desplazar e ir al estado 125
    REAL    desplazar e ir al estado 38
    '-'     desplazar e ir al estado 39
